--- a/src/StojanJovanovicCV.tex
+++ b/src/StojanJovanovicCV.tex
@@ -31,7 +31,7 @@
 \profilepic{} % Profile picture
 
 \cvname{Stojan Jovanovi\'{c}, Ph.D.} % Your name
-\cvjobtitle{Senior Data Scientist \& \newline AI Systems Architect} % Job title/career
+\cvjobtitle{Senior Data Scientist, \newline Analytics Engineer \& \newline AI Systems Architect} % Job title/career
 
 \cvdate{} % Date of birth
 \cvaddress{Oxfordshire,\newline United Kingdom} % Short address/location, use \newline if more than 1 line is required
@@ -47,7 +47,7 @@
 %	 ABOUT ME
 %----------------------------------------------------------------------------------------
 
-\aboutme{As a professional with years of experience in computational \& data science, I am comfortable with every part of the modern analytics workflow, from deploying the first data pipelines and initial model prototyping to ML/Data/DeepOps. \newline In addition, I have considerable expertise in the field of data \& ML systems architecture, having designed both computational infrastructure, as well as high-performance systems, built to support AI solutions. \newline So far,  I have worked professionally in the domains of finance, advertising and healthcare.} % To have no About Me section, just remove all the text and leave \aboutme{}
+\aboutme{As a professional with years of experience in computational \& data science, I am comfortable with every part of the modern analytics workflow, from developing the first data pipelines, via model prototyping, through to Data/MLOps. \newline  In addition, I have considerable expertise in the field of data \& ML systems architecture, having designed both HPC \& distributed systems, built to support AI solutions. \newline So far,  I have worked professionally in the domains of finance, advertising and healthcare.} % To have no About Me section, just remove all the text and leave \aboutme{}
 
 
 %----------------------------------------------------------------------------------------
@@ -55,7 +55,7 @@
 %----------------------------------------------------------------------------------------
 
 % Skill bar section, each skill must have a value between 0 an 6 (float)
-\skills{{Scala/3.0},  {Ansible/ 4.0}, {DB Systems, PostgreSQL/4.4},  {Streamlit, Shiny, Plotly/ 4.3},  {Jupyter, Nteract/ 5.0}, {HPC systems, SLURM, Torque/ 4.3},  {*nix admin, systemd, bash /4.7},  {Docker, Enroot/4.9}, {Dask, Ray, Modin, Spark/ 5.0},  {Pandas, Numpy, Scikit-Learn/5.8}, {Tensorflow, Keras/5.5}, {git/5.0}}
+\skills{{Scala/3.0}, {Rlang, tidyverse/3.5},  {HPC systems, SLURM, Torque/ 4.3},  {*nix admin, systemd, bash, Ansible /4.8},  {Docker, Enroot/4.9}, {dbt, DVC, Prefect/ 4.1},  {Jupyter, Streamlit, Shiny, Plotly/ 4.3}, {DB Systems, PostgreSQL/4.4}, {Dask, Ray, Modin, Spark/ 5.0},  {Pandas, Numpy, Scikit-Learn/5.8}, {Tensorflow/5.5}, {git/5.0}}
 
 %------------------------------------------------
 
@@ -81,11 +81,11 @@
 \section{Experience}
 
 \begin{twenty} % Environment for a list with descriptions
-          \twentyitem{04/20 - now} {Lead Data Scientist}{Sensyne Health Plc, Oxford, UK}{Led a team of 4 people in a project to find clinical predictors of Covid-19 disease severity from real-world EPR data, resulting in 2 publications. Orchestrated deployment of HPC facilities in the company's AI lab.}
-	\twentyitem{01/20 - 04/20}{Machine Learning Architect}{Sensyne Health Plc, Oxford, UK}{Served as DeepOps/ ML engineering lead for company's AI lab, reporting to one of the company's managing directors. Led deployment of central database server, storing sensitive patient data from NHS trust partners. Designed and helped deploy the AI lab's remote working infrastructure at the onset of Covid-19 pandemic. }
+          \twentyitem{04/20 - now} {Lead Data Scientist}{Sensyne Health Plc, Oxford, UK}{Introduced continuous integration for data \& ML pipelines, utilizing on-prem GitLab CI as a data flow orchestrator. Spearheaded deployment of HPC facilities in the company's AI lab. Led a team of 4 people to find clinical predictors of Covid-19 disease severity from real-world EPR data, resulting in 2 publications..}
+	\twentyitem{01/20 - 04/20}{Machine Learning Architect}{Sensyne Health Plc, Oxford, UK}{Led development of  ELT pipeline, standarising \& featurizing data from two NHS trusts for use by DL research teams. Deployed central database server, storing sensitive patient data from NHS trust partners. Designed and deployed the AI lab's remote working infrastructure at the onset of Covid-19 pandemic.}
 	\twentyitem{04/19 - 12/19 } {Senior Machine Learning Researcher}{Sensyne Health Plc, Oxford, UK}{Patented ML solutions for risk prediction and unsupervised detection of sub-populations in heart disease patients. Co-led the design and implementation of complex ML pipeline for a large commercial  project, facilitating collaboration by 3 teams of 30 data scientists.}
 	\twentyitem{05/18 - 03/19}{Machine Learning Engineer}{Adverai Ltd, Stockholm, Sweden}{Designed and engineered Adverai's entire ML microservice stack. Introduced time-series prediction and anomaly detection functionality to the company's core software product.}
-	\twentyitem{04/17 - 05/18}{Data Scientist}{Qliro AB, Stockholm, Sweden}{Designed and built a system for scheduled re-training and scoring of credit risk models on top of Hadoop, Spark and H2O.ai, automating manual credit reserve reporting processes. Helped move ETL processes from SQL to Hadoop, as the company expanded into new markets.}
+	\twentyitem{04/17 - 05/18}{Data Scientist}{Qliro AB, Stockholm, Sweden}{Designed and built a system for scheduled re-training and scoring of credit risk models on top of Hadoop, Spark and H2O.ai, automating manual credit reserve reporting processes. Helpeds migrate ETL systems from RDBMS to the Hadoop ecosystem, as we expanded into new markets.}
 	\twentyitem{04/16 - 04/17}{Data Scientist}{Kavli Institute, Trondheim, Norway}{Developed a novel, latent-variable RNN to predict time series of electrical activity of rat neurons. Currently preparing a publication with the person that continued my research.}
 	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
 \end{twenty}
