add sumreader project to cv

--- a/src/StojanJovanovicCV.tex
+++ b/src/StojanJovanovicCV.tex
@@ -86,7 +86,7 @@
 	\twentyitem{04/19 - 12/19 } {Senior Machine Learning Researcher}{Sensyne Health Plc, Oxford, UK}{Patented ML solutions for risk prediction and unsupervised detection of sub-populations in heart disease patients. Co-led the design and implementation of complex ML pipeline for a large commercial  project, facilitating collaboration by 3 teams of 30 data scientists.}
 	\twentyitem{05/18 - 03/19}{Machine Learning Engineer}{Adverai Ltd, Stockholm, Sweden}{Designed and engineered Adverai's entire ML microservice stack. Introduced time-series prediction and anomaly detection functionality to the company's core software product.}
 	\twentyitem{04/17 - 05/18}{Data Scientist}{Qliro AB, Stockholm, Sweden}{Designed and built a system for scheduled re-training and scoring of credit risk models on top of Hadoop, Spark and H2O.ai, automating manual credit reserve reporting processes. Helpeds migrate ETL systems from RDBMS to the Hadoop ecosystem, as we expanded into new markets.}
-	\twentyitem{04/16 - 04/17}{Data Scientist}{Kavli Institute, Trondheim, Norway}{Developed a novel, latent-variable RNN to predict time series of electrical activity of rat neurons. Currently preparing a publication with the person that continued my research.}
+	\twentyitem{04/16 - 04/17}{Data Scientist}{Kavli Institute, Trondheim, Norway}{Developed a novel, latent-variable RNN to predict time series of electrical activity of rat neurons. Publication currently being prepared.}
 	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
 \end{twenty}
 
@@ -96,8 +96,9 @@
 \section{Personal Projects}
 
 \begin{twentyshort}
-	\twentyitemshort {MLHub}{A small ML playground web service, based on FloydHub. Built using Flask, Jinja2, Keras and Tensorflow. Hosted on Heroku.\newline More info found here ---> \href{https://stojan211287.github.io/MLHubDemo/}{link}}
+	\twentyitemshort {SumReader}{A small data summary library, written as a Reader monad ---> \href{https://stojan211287.github.io/sumreader/}{link}}
 	\twentyitemshort {CallingCard}{A minimalist digital business card, written in Javascript.\newline The business card can be found here ---> \href{https://stojan211287.github.io/stojanjovanovic/}{link}}
+	\twentyitemshort {MLHub}{A small ML playground web service, based on FloydHub. Built using Flask, Jinja2, Keras and Tensorflow. Hosted on Heroku.\newline More info found here ---> \href{https://stojan211287.github.io/MLHubDemo/}{link}}
 \end{twentyshort}
 
 %----------------------------------------------------------------------------------------
