remove dockerfile/heroku deployment; Update CV latex

--- a/src/StojanJovanovicCV.tex
+++ b/src/StojanJovanovicCV.tex
@@ -47,7 +47,7 @@
 %	 ABOUT ME
 %----------------------------------------------------------------------------------------
 
-\aboutme{As a professional with years of experience in computational \& data science, I am comfortable with every part of the modern analytics workflow, from developing the first data pipelines, via model prototyping, through to Data/MLOps. \newline  In addition, I have considerable expertise in the field of data \& ML systems architecture, having designed both HPC \& distributed systems, built to support AI solutions. \newline So far,  I have worked professionally in the domains of finance, advertising and healthcare.} % To have no About Me section, just remove all the text and leave \aboutme{}
+\aboutme{\small A professional with 5+  years of experience in computational \& data science, I am fluent in every part of the modern analytics workflow, from developing first data pipelines, model prototyping, through to Data/MLOps. \newline  Furthermore, I have considerable expertise in the field of data/ML systems design \& engineering, having designed both HPC \& distributed systems, built to support AI solutions. \newline So far,  I have worked professionally in the domains of finance, advertising and healthcare.} % To have no About Me section, just remove all the text and leave \aboutme{}
 
 
 %----------------------------------------------------------------------------------------
@@ -55,7 +55,7 @@
 %----------------------------------------------------------------------------------------
 
 % Skill bar section, each skill must have a value between 0 an 6 (float)
-\skills{{Scala/3.0}, {Rlang, tidyverse/3.5},  {HPC systems, SLURM, Torque/ 4.3},  {*nix admin, systemd, bash, Ansible /4.8},  {Docker, Enroot/4.9}, {dbt, DVC, Prefect/ 4.1},  {Jupyter, Streamlit, Shiny, Plotly/ 4.3}, {DB Systems, PostgreSQL/4.4}, {Dask, Ray, Modin, Spark/ 5.0},  {Pandas, Numpy, Scikit-Learn/5.8}, {Tensorflow/5.5}, {git/5.0}}
+\skills{{Golang, JavaScript, Elm/2.2}, {Scala, Clojure/3.0}, {Rlang, tidyverse, ggplot2/3.5},  {HPC systems, SLURM, Torque/ 4.3},  {*nix admin, systemd, bash, Ansible /4.8},  {Docker, Enroot/4.9}, {dbt, DVC, Prefect/ 4.1},  {Jupyter, Streamlit, Shiny/ 4.3}, {DB Systems, PostgreSQL/4.4}, {Dask, Ray, Modin, Spark/ 5.0},  {Pandas, Numpy, Scikit-Learn/5.8}, {Tensorflow, Keras/5.5}, {git/5.0}}
 
 %------------------------------------------------
 
@@ -81,12 +81,12 @@
 \section{Experience}
 
 \begin{twenty} % Environment for a list with descriptions
-          \twentyitem{04/20 - now} {Lead Data Scientist}{Sensyne Health Plc, Oxford, UK}{Introduced continuous integration for data \& ML pipelines, utilizing on-prem GitLab CI as a data flow orchestrator. Spearheaded deployment of HPC facilities in the company's AI lab. Led a team of 4 people to find clinical predictors of Covid-19 disease severity from real-world EPR data, resulting in 2 publications..}
-	\twentyitem{01/20 - 04/20}{Machine Learning Architect}{Sensyne Health Plc, Oxford, UK}{Led development of  ELT pipeline, standarising \& featurizing data from two NHS trusts for use by DL research teams. Deployed central database server, storing sensitive patient data from NHS trust partners. Designed and deployed the AI lab's remote working infrastructure at the onset of Covid-19 pandemic.}
-	\twentyitem{04/19 - 12/19 } {Senior Machine Learning Researcher}{Sensyne Health Plc, Oxford, UK}{Patented ML solutions for risk prediction and unsupervised detection of sub-populations in heart disease patients. Co-led the design and implementation of complex ML pipeline for a large commercial  project, facilitating collaboration by 3 teams of 30 data scientists.}
-	\twentyitem{05/18 - 03/19}{Machine Learning Engineer}{Adverai Ltd, Stockholm, Sweden}{Designed and engineered Adverai's entire ML microservice stack. Introduced time-series prediction and anomaly detection functionality to the company's core software product.}
-	\twentyitem{04/17 - 05/18}{Data Scientist}{Qliro AB, Stockholm, Sweden}{Designed and built a system for scheduled re-training and scoring of credit risk models on top of Hadoop, Spark and H2O.ai, automating manual credit reserve reporting processes. Helpeds migrate ETL systems from RDBMS to the Hadoop ecosystem, as we expanded into new markets.}
-	\twentyitem{04/16 - 04/17}{Data Scientist}{Kavli Institute, Trondheim, Norway}{Developed a novel, latent-variable RNN to predict time series of electrical activity of rat neurons. Publication currently being prepared.}
+          \twentyitem{04/20 - now} {Lead Data Scientist}{Sensyne Health Plc, Oxford, UK}{\rule{305pt}{1pt} \small Slurm / Dask / PostgreSQL / DVC / dbt / Ray / PyArrow / Enroot / R  \newline \rule{305pt}{1pt} \footnotesize Spearheaded deployment of HPC facilities (9 node hybrid CPU/GPU system, WekaFS, InfiniBand) in the company's AI lab. \newline Led a team of 4 data scientists to find clinical predictors of Covid-19 disease severity from real-world EPR data, resulting in 2 publications. \newline Introduced CI for data/ML pipelines, using on-prem GitLab CI as an orchestrator.}
+	\twentyitem{01/20 - 04/20}{Machine Learning Architect}{Sensyne Health Plc, Oxford, UK}{\rule{305pt}{1pt} \small Modin / Pandas / PostgreSQL / TensorFlow / Dask / R / Parquet \newline \rule{305pt}{1pt} \footnotesize Led development of  ELT pipeline system, producing standardised \& analytics-ready datasets from two NHS trusts for use by DL research teams. \newline Designed/deployed central DB server, storing sensitive patient data from NHS trusts, as well as AI lab's remote work infrastructure at Covid19 pandemic onset.}
+	\twentyitem{04/19 - 12/19 } {Senior Machine Learning Researcher}{Sensyne Health Plc, Oxford, UK}{\rule{305pt}{1pt} \small Ansible / Keras / Pandas / Dask / Nvidia-Docker / Prefect / GCP \newline \rule{305pt}{1pt} \footnotesize Led design and implementation of complex ML pipeline for large commercial  project, enabling collaboration by 3 teams of 30 data scientists. \newline Built the company's AI lab infrastructure from scratch - from one shared server to a secure network of 50+ workstations with air-gapped central GitLab services, private Docker registry, private *nix package repositories \& secure remote storage.}
+	\twentyitem{05/18 - 03/19}{Machine Learning Engineer}{Adverai Ltd, Stockholm, Sweden}{\rule{305pt}{1pt} \small TensorFlow (Serving) / gRPC / Docker / GitLab / PostgreSQL / GraphQL \newline \rule{305pt}{1pt} \footnotesize Designed and engineered Adverai's entire ML microservice stack (model serving infrastructure, HTTP/gRPC APIs, CI/CD system). Using the new ML stack, introduced time-series prediction and anomaly detection functionality to the company's core software product.}
+	\twentyitem{04/17 - 05/18}{Data Scientist}{Qliro AB, Stockholm, Sweden}{\rule{305pt}{1pt} \small R / ELK stack / Scikit-Learn / Scala / Spark / H2O.ai / SQL Server \newline \rule{305pt}{1pt} \footnotesize Designed and built a system for scheduled re-training and scoring of credit risk models on top of Hadoop, Spark and H2O.ai, automating manual credit reserve reporting processes. \newline Helped migrate ETL systems from RDBMS to the Hadoop ecosystem, as data volume rose while we expanded into new markets.}
+	\twentyitem{04/16 - 04/17}{Data Scientist}{Kavli Institute, Trondheim, Norway}{\rule{305pt}{1pt} \small Torque / TensorFlow / Pandas / Scikit-Learn / Scikit-Image / Jupyter \rule{305pt}{1pt} \footnotesize Developed a novel, latent-variable RNN network architecture to predict time series of electrical activity of rat neurons. Publication still being prepared.}
 	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
 \end{twenty}
 
@@ -96,9 +96,9 @@
 \section{Personal Projects}
 
 \begin{twentyshort}
-	\twentyitemshort {SumReader}{A small data summary library, written as a Reader monad ---> \href{https://stojan211287.github.io/sumreader/}{link}}
-	\twentyitemshort {CallingCard}{A minimalist digital business card, written in Javascript.\newline The business card can be found here ---> \href{https://stojan211287.github.io/stojanjovanovic/}{link}}
-	\twentyitemshort {MLHub}{A small ML playground web service, based on FloydHub. Built using Flask, Jinja2, Keras and Tensorflow. Hosted on Heroku.\newline More info found here ---> \href{https://stojan211287.github.io/MLHubDemo/}{link}}
+	\twentyitemshort {\small SumReader}{\small A small data summary library, written as a Reader monad ---> \href{https://stojan211287.github.io/sumreader/}{link}}
+	\twentyitemshort {\small CallingCard}{\small A minimalist digital business card, written in TypeScript ---> \href{https://stojan211287.github.io/stojanjovanovic/}{link}}
+	\twentyitemshort {\small MLHub}{\small An AI-Lab-as-a-service prototype, inspired by FloydHub ---> \href{https://stojan211287.github.io/MLHubDemo/}{link}}
 \end{twentyshort}
 
 %----------------------------------------------------------------------------------------
@@ -108,9 +108,9 @@
 \section{Education}
 
 \begin{twenty} % Environment for a list with descriptions
-	\twentyitem{2012 - 2016}{Ph.D.  in Comp. Neuroscience \& Computer Science}{Magna Cum Laude}{ Bernstein Centre Freiburg, Freiburg im Breisgau, Germany\newline  KTH Royal Institute of Technology, Stockholm, Sweden\newline Erasmus Mundus Joint PhD Programme}
-	\twentyitem{2010 - 2011}{M.Sc. in  Applied Mathematics \& Operations Research}{9.5/10.0 GPA}{University of Belgrade, Serbia.\newline Principal subjects: stochastic calculus \& graph theory}
-	\twentyitem{2006 - 2010}{B.Sc. in Statistics, Actuarial and Financial Mathematics}{9.2/10.0 GPA}{University of Belgrade, Serbia\newline Principal subjects: probability theory, mathematical statistics, \newline financial and actuarial mathematics}
+	\twentyitem{2012 - 2016}{Ph.D. in Computer Science \& Comp. Neuroscience}{Magna Cum Laude}{ \small KTH Royal Institute of Technology, Stockholm, Sweden \newline Bernstein Centre Freiburg, Freiburg im Breisgau, Germany \newline Erasmus Mundus Joint PhD Programme}
+	\twentyitem{2010 - 2011}{M.Sc. in  Applied Mathematics \& Operations Research}{9.5/10.0 GPA}{\small University of Belgrade, Serbia.\newline Principal subjects: stochastic calculus, graph theory, queueing theory}
+	\twentyitem{2006 - 2010}{B.Sc. in Statistics, Actuarial and Financial Mathematics}{9.2/10.0 GPA}{\small University of Belgrade, Serbia\newline Principal subjects: statistics, financial and actuarial mathematics}
 	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
 \end{twenty}
 
@@ -122,14 +122,14 @@
 %	 OTHER INFORMATION
 %----------------------------------------------------------------------------------------
 
-\section{Invited talks and study visits}
+%\section{Invited talks and study visits}
 
-\begin{twentyshort} % Environment for a short list with no descriptions
-	\twentyitemshort{02/17}{Visiting Researcher at the Institute for Advanced Study, Princeton, New Jersey}
-	\twentyitemshort{08/16}{Invited to speak at the Institute for Materials Science, Los Alamos National Lab, Los Alamos, New Mexico}
+%\begin{twentyshort} % Environment for a short list with no descriptions
+%	\twentyitemshort{02/17}{\small Visiting Researcher at the Institute for Advanced Study, Princeton, New Jersey}
+%	\twentyitemshort{08/16}{\small Invited to speak at the Institute for Materials Science, Los Alamos National Lab, Los Alamos, New Mexico}
 
 	%\twentyitemshort{<dates>}{<title/description>}
-\end{twentyshort}
+%\end{twentyshort}
 
 %----------------------------------------------------------------------------------------
 %	 PUBLICATIONS
